syntax = "proto3";
option java_package = "grpc";

service MediaMetadata {
  rpc newMediaMetadata(CreateNewMediaMetadataRequest) returns (MediaMetadataResponse) {};
  rpc updateMediaMetadata(UpdateMediaRequest) returns(MediaMetadataResponse) {};
}

message CreateNewMediaMetadataRequest {
  string name = 1;
  string siteName = 2;
  int32 length = 3;
  int32 status = 4;
  string thumbnail = 5;
  int32 projectId = 6;
  string awsBucketWholeMedia = 7;
  string awsStorageNameWholeMedia = 8;
}

message MediaMetadataResponse {
  int32  mediaId = 1;
  string name = 2;
  string siteName = 3;
  int32 length = 4;
  int32 status = 5;
  string thumbnail = 6;
  int32 projectId = 7;
  string awsBucketWholeMedia = 8;
  string awsStorageNameWholeMedia = 9;
  repeated string keywords = 10;
  int64 createdAt = 11;
  int64 updatedAt = 12;
}


message UpdateMediaRequest {
  int32  mediaId = 1;
  string name = 2;
  string siteName = 3;
  int32 length = 4;
  int32 status = 5;
  string thumbnail = 6;
  int32 projectId = 7;
  string awsBucketWholeMedia = 8;
  string awsStorageNameWholeMedia = 9;
  int64 createdAt = 11;
}
